feat: 添加发布到中央仓库配置